# Leapp

./: CMakeLists.txt  README.md
cmake/: CompilerFlags.cmake  FindLeapSDK.cmake
doc/: CMakeLists.txt  Doxyfile
examples/: CMakeLists.txt  minDemo.cpp  statusDemo.cpp  trackingDemo.cpp
include/Leapp/: Connection.hpp  Device.hpp  EventData.hpp  Hand.hpp  Leapp.hpp  Math.hpp  Result.hpp
src/Leapp/: Connection.cpp  Device.cpp  EventData.cpp  Math.cpp
